--- a/꾹꾹이/Base.lproj/Main.storyboard
+++ b/꾹꾹이/Base.lproj/Main.storyboard
@@ -1141,7 +1141,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="OdV-T5-hq4">
-                                <rect key="frame" x="16" y="160" width="343" height="100"/>
+                                <rect key="frame" x="16" y="180" width="343" height="100"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UXh-C6-vAs">
                                         <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
@@ -1149,7 +1149,7 @@
                                             <constraint firstAttribute="height" constant="100" id="4fw-n2-Acn"/>
                                             <constraint firstAttribute="width" constant="100" id="w4Q-R7-BFS"/>
                                         </constraints>
-                                        <state key="normal" image="catt"/>
+                                        <state key="normal" image="duckk"/>
                                         <connections>
                                             <action selector="buttonTouchDown:" destination="kDS-bS-tZ2" eventType="touchDown" id="UJA-c9-YM7"/>
                                             <action selector="buttonTouchUpInside:" destination="kDS-bS-tZ2" eventType="touchUpInside" id="h8Q-ZG-HOj"/>
@@ -1160,7 +1160,7 @@
                                         <constraints>
                                             <constraint firstAttribute="width" constant="100" id="Dax-he-reF"/>
                                         </constraints>
-                                        <state key="normal" image="duckk"/>
+                                        <state key="normal" image="winee"/>
                                         <connections>
                                             <action selector="buttonTouchDown:" destination="kDS-bS-tZ2" eventType="touchDown" id="6CC-by-Rdw"/>
                                             <action selector="buttonTouchUpInside:" destination="kDS-bS-tZ2" eventType="touchUpInside" id="RfM-ao-JKn"/>
@@ -1171,7 +1171,7 @@
                                         <constraints>
                                             <constraint firstAttribute="width" constant="100" id="vIt-Ru-Ugv"/>
                                         </constraints>
-                                        <state key="normal" image="heartt"/>
+                                        <state key="normal" image="waterr"/>
                                         <connections>
                                             <action selector="buttonTouchDown:" destination="kDS-bS-tZ2" eventType="touchDown" id="vGF-Np-k4d"/>
                                             <action selector="buttonTouchUpInside:" destination="kDS-bS-tZ2" eventType="touchUpInside" id="4DF-ac-MHn"/>
@@ -1180,13 +1180,16 @@
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mRU-7d-LEY">
-                                <rect key="frame" x="162" y="104" width="50" height="0.0"/>
+                                <rect key="frame" x="162" y="104" width="50" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="qQe-bG-Aaa"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="n5u-C5-D31">
-                                <rect key="frame" x="16" y="285" width="343" height="100"/>
+                                <rect key="frame" x="16" y="305" width="343" height="100"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4LR-ZH-QrP">
                                         <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
@@ -1205,7 +1208,7 @@
                                         <constraints>
                                             <constraint firstAttribute="width" constant="100" id="fZc-2W-Thv"/>
                                         </constraints>
-                                        <state key="normal" image="winee"/>
+                                        <state key="normal" image="catt"/>
                                         <connections>
                                             <action selector="buttonTouchDown:" destination="kDS-bS-tZ2" eventType="touchDown" id="LqR-d7-wIm"/>
                                             <action selector="buttonTouchUpInside:" destination="kDS-bS-tZ2" eventType="touchUpInside" id="HFN-ex-m3l"/>
@@ -1216,7 +1219,7 @@
                                         <constraints>
                                             <constraint firstAttribute="width" constant="100" id="BeQ-NA-oHh"/>
                                         </constraints>
-                                        <state key="normal" image="cookiee"/>
+                                        <state key="normal" image="heartt"/>
                                         <connections>
                                             <action selector="buttonTouchDown:" destination="kDS-bS-tZ2" eventType="touchDown" id="3G7-tR-AlX"/>
                                             <action selector="buttonTouchUpInside:" destination="kDS-bS-tZ2" eventType="touchUpInside" id="wDR-cY-cze"/>
@@ -1225,7 +1228,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="WaA-rH-sj1">
-                                <rect key="frame" x="16" y="410" width="343" height="100"/>
+                                <rect key="frame" x="16" y="430" width="343" height="100"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WOS-4s-oNj">
                                         <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
@@ -1233,7 +1236,7 @@
                                             <constraint firstAttribute="height" constant="100" id="H8U-J3-rkT"/>
                                             <constraint firstAttribute="width" constant="100" id="r14-Ae-CE6"/>
                                         </constraints>
-                                        <state key="normal" image="moonn"/>
+                                        <state key="normal" image="cookiee"/>
                                         <connections>
                                             <action selector="buttonTouchDown:" destination="kDS-bS-tZ2" eventType="touchDown" id="X33-sO-XWa"/>
                                             <action selector="buttonTouchUpInside:" destination="kDS-bS-tZ2" eventType="touchUpInside" id="DwL-Da-mO5"/>
@@ -1244,7 +1247,7 @@
                                         <constraints>
                                             <constraint firstAttribute="width" constant="100" id="CK7-qN-tHU"/>
                                         </constraints>
-                                        <state key="normal" image="mousee"/>
+                                        <state key="normal" image="moonn"/>
                                         <connections>
                                             <action selector="buttonTouchDown:" destination="kDS-bS-tZ2" eventType="touchDown" id="kO6-Tk-nS8"/>
                                             <action selector="buttonTouchUpInside:" destination="kDS-bS-tZ2" eventType="touchUpInside" id="sY9-wu-piC"/>
@@ -1255,7 +1258,7 @@
                                         <constraints>
                                             <constraint firstAttribute="width" constant="100" id="X4N-Ex-QeG"/>
                                         </constraints>
-                                        <state key="normal" image="waterr"/>
+                                        <state key="normal" image="mousee"/>
                                         <connections>
                                             <action selector="buttonTouchDown:" destination="kDS-bS-tZ2" eventType="touchDown" id="23C-uD-PVo"/>
                                             <action selector="buttonTouchUpInside:" destination="kDS-bS-tZ2" eventType="touchUpInside" id="ttO-7L-8Cd"/>
@@ -1294,7 +1297,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ueu-XY-9zc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1302" y="786"/>
+            <point key="canvasLocation" x="1301.5999999999999" y="785.75712143928047"/>
         </scene>
         <!--play-->
         <scene sceneID="Ltq-VB-8WB">
